# cg-finalproject

./: CMakeLists.txt  ProjectHome.md
End/: CMakeLists.txt  End.hpp
End/Particle221Src/Goodies/Release_vc80/: glew32s.lib  libpng.lib
End/Particle221Src/Goodies/Release_vc90/: TIFF.lib  libpng.lib
End/Particle221Src/Particle2/Example/: Example.cpp
End/Particle221Src_old/Goodies/Debug_vc90/: JPEG.lib  ZLib.lib  freeglut_static.lib  libpng.lib
End/Particle221Src_old/Goodies/Release_vc80/: jpeg.lib
End/Particle221Src_old/Goodies/Release_vc90/: glew32s.lib
Intro/: CMakeLists.txt
Intro/include/: applicationParameters.hpp  camera.hpp  defs.hpp  directionalLight.hpp  keyboardEventHandler.hpp  material.hpp  plyData.hpp  plyData__.hpp  plyModel.hpp  scene.hpp  spotLight.hpp  stageSoundClass.hpp  text.hpp  texture.hpp  types.hpp
Intro/proj/unix/: exercise
Intro/src/: material.cpp  plyData__.cpp  scene.cpp  stage.cpp  stageSoundClass.cpp  types.cpp  utils.cpp
ShootingArena/: AppShootingDemo  Application.cpp  Application.h  CMakeLists.txt  Example.nocode  GlutApplication.cpp  GlutStuffs.cpp  GlutStuffs.h  Makefile  ShapeDrawer.cpp  ShapeDrawer.h  ShootingDemo.cpp  ShootingDemo.h  cmake_install.cmake  main.cpp  soundClass.cpp  soundClass.hpp  tga.h~
ShootingArena/include/: ShapeDrawer.h  material.hpp
ShootingArena/src/: Application.cpp  DemoApplication.cpp  GlutStuffs.cpp  ShootingDemo.cpp  material.cpp  sMaterial.cpp
bullet-2.76/: CMakeLists.txt
bullet-2.76/Demos/: CMakeLists.txt  Makefile  cmake_install.cmake  testFile.bullet
bullet-2.76/Demos/OpenGL/: DemoApplication.cpp  Makefile  cmake_install.cmake
bullet-2.76/src/: cmake_install.cmake
bullet-2.76/src/BulletCollision/: cmake_install.cmake
bullet-2.76/src/BulletDynamics/: Makefile  cmake_install.cmake
bullet-2.76/src/BulletMultiThreaded/: cmake_install.cmake
bullet-2.76/src/BulletSoftBody/: Makefile  cmake_install.cmake
final/include/: camera2D.hpp  camera3D.hpp  mouseEventHandler.hpp  positionalLight.hpp  stage.hpp  text3d.h  utils.hpp  window.hpp
final/proj/unix/: Makefile  calathea.ply  crates.ply  exercise  obs.ply  treeTop.ply
final/proj/unix/textures/: brick1.tga  plank01.tga
final/src/: monitor.cpp  plyData.cpp  positionalLight.cpp  scene.cpp  screenTexture.cpp  spotLight.cpp  stage.cpp  text.cpp  text3d.cpp  timer.cpp  window.cpp
tex/: Soupcan.tga  marble.tga  test.tga
trunk/: .project  CMakeLists.txt  README.txt  main.cpp
trunk/End/: CMakeLists.txt  End.cpp  main.cpp
trunk/End/Particle221Src/Goodies/Debug_vc80/: glew32s.lib  jpeg.lib
trunk/End/Particle221Src/Goodies/Debug_vc90/: TIFF.lib  glew32s.lib
trunk/End/Particle221Src/Goodies/Release_vc80/: tiff.lib  zlib.lib
trunk/End/Particle221Src/Goodies/Release_vc90/: ZLib.lib
trunk/End/Particle221Src/Particle2/Example/: example
trunk/End/Particle221Src/Particle2/Particle/: pVec.h
trunk/End/Particle221Src_old/Goodies/Debug_vc80/: freeglut_static.lib  libpng.lib  tiff.lib  zLib.lib
trunk/End/Particle221Src_old/Goodies/Release_vc80/: freeglut_static.lib
trunk/End/Particle221Src_old/Goodies/Release_vc90/: JPEG.lib  freeglut_static.lib
trunk/Intro/: CMakeLists.txt
trunk/Intro/include/: drawable.hpp  exception.hpp  monitor.hpp  opengl_includes.hpp  stage.hpp  stageSoundClass.hpp  timer.hpp
trunk/Intro/proj/unix/: Makefile  exercise.pro
trunk/Intro/src/: applicationParameters.cpp  camera.cpp  camera2D.cpp  camera3D.cpp  directionalLight.cpp  plyModel.cpp  scene.cpp  soundClass.cpp  text3d.cpp  texture.cpp
trunk/ShootingArena/: AppShootingDemo  Application.cpp  CMakeCache.txt  CMakeLists.txt  GlutApplication.h  Makefile  Particle.nocode  ShapeDrawer.cpp  ShapeDrawer.h  ShootingDemo.cpp  ShootingDemo.h  main.cpp  material.cpp~  myShape.bullet  soundClass.cpp  soundClass.hpp  tga.c~  tga.h
trunk/ShootingArena/include/: Application.h  DemoApplication.h  ShapeDrawer.h  ShootingDemo.h  sMaterial.hpp
trunk/ShootingArena/src/: Application.cpp  GlutApplication.cpp  GlutStuffs.cpp  ShapeDrawer.cpp  ShootingDemo.cpp
trunk/bullet-2.76/Demos/: Makefile
trunk/bullet-2.76/Demos/OpenGL/: Makefile  cmake_install.cmake
trunk/bullet-2.76/src/: Makefile  cmake_install.cmake
trunk/bullet-2.76/src/BulletCollision/: Makefile  cmake_install.cmake
trunk/bullet-2.76/src/BulletDynamics/: cmake_install.cmake
trunk/bullet-2.76/src/BulletMultiThreaded/: Makefile  cmake_install.cmake
trunk/bullet-2.76/src/BulletSoftBody/: Makefile
trunk/bullet-2.76/src/LinearMath/: Makefile  cmake_install.cmake
trunk/final/: .cproject  .project
trunk/final/include/: light.hpp  vector.hpp
trunk/final/proj/unix/: base.ply  exercise  join.ply  oldMakefile  tree.ply
trunk/final/proj/unix/models/: fence.ply  monorail.ply  rails.ply  trunk.ply
trunk/final/proj/unix/textures/: NewPlank.tga  Soupcan.tga  floor.tga  marble02.tga  oldroof.tga  thinleaves.tga  wornwood.tga
trunk/final/src/: light.cpp  main.cpp  scene.cpp  soundClass.cpp  stage.cpp
trunk/tex/: bunnytex.tga  scratched.tga
